Add StrictMode.kt ANY_FAIL After first test failure run will end

--- a/cli/src/test/resources/fixture/config/sample_1_rp.yaml
+++ b/cli/src/test/resources/fixture/config/sample_1_rp.yaml
@@ -65,7 +65,7 @@ excludeSerialRegexes:
 ignoreFailures: false
 isCodeCoverageEnabled: false
 fallbackToScreenshots: false
-strictMode: true
+strictMode: all_success
 testBatchTimeoutMillis: 20000
 testOutputTimeoutMillis: 30000
 debug: true
