--- a/cli/src/test/resources/fixture/config/sample_1.yaml
+++ b/cli/src/test/resources/fixture/config/sample_1.yaml
@@ -67,7 +67,7 @@ excludeSerialRegexes:
 ignoreFailures: false
 isCodeCoverageEnabled: false
 fallbackToScreenshots: false
-strictMode: true
+strictMode: all_success
 testBatchTimeoutMillis: 20000
 testOutputTimeoutMillis: 30000
 debug: true
